Fix: overflowing issues on mobile landscape orientation

--- a/src/sections/about/About.module.css
+++ b/src/sections/about/About.module.css
@@ -1,5 +1,4 @@
 .about {
-	/* height: 100svh; */
 	width: 50%;
 	padding: 0.5rem;
 
@@ -21,7 +20,7 @@
 	font-weight: 700;
 	line-height: 1.5;
 	text-transform: uppercase;
-	margin-block: 1.5rem;
+	padding-block: 1.5rem;
 	width: 100%;
 	text-align: center;
 	text-box-trim: trim-both;
