--- a/src/sections/hero/Hero.module.css
+++ b/src/sections/hero/Hero.module.css
@@ -1,9 +1,9 @@
 .hero {
 	display: flex;
-	min-height: 85svh;
+	min-height: 90svh;
 	overflow: hidden;
 
-	@media (width < 390px) {
+	@media (width < 420px) {
 		min-height: 100svh;
 	}
 }
@@ -104,14 +104,13 @@
 }
 
 .infoContainer {
-	height: 30svh;
 	width: 100%;
 	padding: 1rem;
+	height: 20%;
 
 	@media (width < 1024px) {
 		padding-inline: 0;
 		padding-bottom: 0;
-		height: 22svh;
 	}
 
 	.infoInner {
@@ -120,12 +119,12 @@
 		height: 100%;
 		display: flex;
 		align-items: center;
-		padding-block: 1rem;
+		/* padding-block: 1rem; */
 	}
 
 	.adressContainer,
 	.hoursContainer {
-		padding-inline: 1rem;
+		/* padding: 8rem 1rem; */
 		width: 50%;
 		display: flex;
 		flex-direction: column;
@@ -137,6 +136,10 @@
 
 		@media (width < 1024px) {
 			font-size: clamp(0.75rem, 0.4214rem + 0.905vw, 1rem);
+		}
+
+		@media (width < 480px) {
+			/* padding: 2rem 0.5rem; */
 		}
 
 		.days {
