--- a/src/sections/keywords/Keywords.module.css
+++ b/src/sections/keywords/Keywords.module.css
@@ -1,10 +1,11 @@
 .keywords {
-	height: 15svh;
+	min-height: 10svh;
 	width: 50%;
 	padding: 0.5rem;
 
 	@media (width < 1024px) {
 		width: 100%;
+		height: auto;
 	}
 }
 
@@ -15,11 +16,12 @@
 	overflow: hidden;
 	display: flex;
 	align-items: center;
+	padding-block: 2rem;
 }
 
 .keywordsScroll {
 	display: flex;
-	gap: 4rem;
+	gap: 2rem;
 
 	ul {
 		list-style: none;
@@ -27,7 +29,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		gap: 1.5rem;
+		gap: 1rem;
 		font-size: clamp(1.5rem, 0.8571rem + 0.7143vw, 2rem);
 		text-transform: uppercase;
 		animation: scroll 20s linear infinite;
@@ -40,6 +42,6 @@
 
 @keyframes scroll {
 	to {
-		transform: translateX(calc(-100% - 4rem));
+		transform: translateX(calc(-100% - 2rem));
 	}
 }
